--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 server.port=5454
 
-#db specific properties
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:myToDos}
+#db specific properties local
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:myToDos}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${DB_USERNAME:root}
+#spring.datasource.password=${DB_PASSWORD:root}
+
+
+#db specific properties Azure
+spring.datasource.url=jdbc:mysql://${DB_HOST:todo-server.mysql.database.azure.com}/${DB_NAME:myToDos}?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.username=${DB_USERNAME:aayush}
+spring.datasource.password=${DB_PASSWORD:A@yush5795}
 
 
 #ORM s/w specific properties
